# cookiecutter-fastapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  cookiecutter.json  dev-compose.yaml  mypy.ini  pyproject.toml  tasks.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: run_lint_and_tests.yaml
backend/: app.py  app_factory.py  auth.py  cache.py  config.py  dependencies.py  logging.py  models.py  routes.py  schema.py  types.py  utils.py
backend/auth/: dependencies.py
backend/cache/: dependencies.py
backend/cli/: __main__.py
backend/db/: dependencies.py  models.py  utils.py
config/: default.yaml  testing.yaml
migrations/: env.py
tests/: conftest.py  test_routes.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-compose.yaml  mypy.ini  pyproject.toml  tasks.py
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/migrations/versions/: 5d46056f3bb2_add_user_model.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_routes.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  app.py  app_factory.py  config.py  dependencies.py  logging.py  routes.py  schema.py  types.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/auth/: dependencies.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cache/: dependencies.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cli/: __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/: dependencies.py  models.py  utils.py
