[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "Myproject backend"
authors = ["Stepan Nazarov <stepanartov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.63.0", extras = ["all"]}
dynaconf = "^3.1.2"
sentry-sdk = "^0.19.5"
loguru = "^0.5.3"
aioredis = "^1.3.1"
SQLAlchemy = {version = "^1.3.22", allow-prereleases = true}
asyncpg = "^0.21.0"
passlib = "^1.7.4"
Authlib = "^0.15.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
ipdb = "^0.13.4"
pre-commit = "^2.9.3"
mypy = "^0.790"
typer = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
