[tool.poetry]
name = "GraphQL FastAPI Boilerplate"
version = "0.1.0"
description = "GraphQL FastAPI Boilerplate"
authors = ["Stepan Nazarov <stepanartov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.63.0", extras = ["all"]}
dynaconf = "^3.1.2"
sentry-sdk = "^1.0.0"
loguru = "^0.5.3"
aioredis = "^1.3.1"
SQLAlchemy = "^1.4.13"
asyncpg = "^0.21.0"
passlib = "^1.7.4"
Authlib = "^0.15.2"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pre-commit = "^2.12.1"
mypy = "^0.812"
typer = "^0.3.2"
ipdb = "^0.13.7"
ipykernel = "^5.5.4"
invoke = "^1.5.0"
pytest = "^6.2.1"
testcontainers = {version = "^3.2.0", extras = ["postgresql", "redis"]}
alembic = "^1.4.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
