[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}}"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "^0.68.1", extras = ["all"]}
dynaconf = "^3.1.5"
sentry-sdk = "^1.3.1"
loguru = "^0.5.3"
aioredis = "^2.0.0"
SQLAlchemy = "^1.4.23"
asyncpg = "^0.24.0"
passlib = "^1.7.4"
Authlib = "^0.15.4"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pre-commit = "^2.14.1"
mypy = "^0.910"
typer = "^0.3.2"
ipdb = "^0.13.9"
ipykernel = "^6.4.1"
invoke = "^1.6.0"
pytest = "^6.2.4"
testcontainers = {version = "^3.4.2", extras = ["postgresql", "redis"]}
alembic = "^1.6.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
